--- a/index.html
+++ b/index.html
@@ -8,10 +8,126 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="CSS/stylesheet.css">
-    <title>Hello, world!</title>
+    <title>Carousel</title>
   </head>
   <body>
-    <h1>Hello, world!</h1>
+    <div class="container">
+      <div class="row">
+        <div class="col-12">
+          <div id="carouselHero" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-indicators">
+              <button
+                type="button"
+                data-bs-target="#carouselHero"
+                data-bs-slide-to="0"
+                aria-label="Slide 1"
+                class="active"
+              ></button>
+              <button
+                type="button"
+                data-bs-target="#carouselHero"
+                data-bs-slide-to="1"
+                aria-label="Slide 2"
+              ></button>
+              <button
+                type="button"
+                data-bs-target="#carouselHero"
+                data-bs-slide-to="2"
+                aria-label="Slide 3"
+              ></button>
+              <button
+                type="button"
+                data-bs-target="#carouselHero"
+                data-bs-slide-to="3"
+                aria-label="Slide 4"
+              ></button>
+              <button
+                type="button"
+                data-bs-target="#carouselHero"
+                data-bs-slide-to="4"
+                aria-label="Slide 5"
+              ></button>
+            </div>
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img
+                  src="/IMG/bear1.jpg"
+                  alt="First slide"
+                  class="d-block w-100"
+                />
+                <div class="carousel-caption">
+                  <h1>Hello!</h1>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <img
+                  src="/IMG/bear2.jpg"
+                  alt="Second slide"
+                  class="d-block w-100"
+                />
+                <div class="carousel-caption">
+                  <h1>We are bears.</h1>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <img
+                  src="/IMG/bear3.jpg"
+                  alt="Third slide"
+                  class="d-block w-100"
+                />
+                <div class="carousel-caption">
+                  <h1 class="text-dark">We love to chill...</h1>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <img
+                  src="/IMG/bear4.jpg"
+                  alt="Fourth slide"
+                  class="d-block w-100"
+                />
+                <div class="carousel-caption">
+                  <h1 class="text-dark">And sleep a ton...</h1>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <img
+                  src="/IMG/bear5.jpg"
+                  alt="Fifth slide"
+                  class="d-block w-100"
+                />
+                <div class="carousel-caption">
+                  <h1>Bye for now!</h1>
+                </div>
+              </div>
+            </div>
+            <button
+              type="button"
+              class="carousel-control-prev"
+              data-bs-target="#carouselHero"
+              data-bs-slide="prev"
+            >
+              <span
+                class="carousel-control-prev-icon"
+                aria-hidden="true"
+              ></span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button
+              type="button"
+              class="carousel-control-next"
+              data-bs-target="#carouselHero"
+              data-bs-slide="next"
+            >
+              <span
+                class="carousel-control-next-icon"
+                aria-hidden="true"
+              ></span>
+              <span class="visually-hidden">Next</span>
+            </button>
+          </div>
+        </div>
+      </div>
+    </div>
 
     <!-- Optional JavaScript; choose one of the two! -->
 
